# uju

./: .gitignore  NOTES.md  sample_query.js  uju.code-workspace
.github/workflows/: integration-test.yaml  test-elixir.yaml  test-rust.yaml
server/: .gitignore  mix.exs  websocket_v1_test.sh
server/config/: config.exs  test.exs
server/lib/: ok.ex  server.ex
server/lib/server/: application.ex
server/lib/server/cluster/: cluster.ex
server/lib/server/internal/send_query/: compiler.ex  op.ex  planner.ex  plugin.ex
server/lib/server/internal/v1/send_query/: compiler.ex  op.ex  planner.ex  plugin.ex
server/lib/server/plugin/: plugin.ex  plugins.ex  pointer.ex
server/lib/server/plugin/api/: plugin.ex  v1_plugin.ex
server/lib/server/protocol/: machine.ex  parser.ex  protocol_v1.ex  session.ex
server/lib/server/protocol/v1/: machine.ex  protocol.ex  session.ex
server/test/: test_helper.exs
server/test/plugin/: pointer_test.exs
server/test/plugins/: pointer_test.exs
server/test/server/protocol/: machine_v1_test.exs  protocol_v1_test.exs  session_v1_test.exs
server/test/support/: simple_http1_client.ex  simple_websocket_client.ex  transport.ex  websocket_v1_client.ts  websocket_v1_expected.txt
uju-rs/: Cargo.toml
uju-rs/src/client/v1/: http.rs  mod.rs
uju-rs/src/protocol/: v1.rs
