[package]
name = "uju"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = { version = "1.9.0", features = ["serde"] }
miette = "5.10.0"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
serde_repr = "0.1.18"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "0.21.0"
